--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "apollo-server-micro": "^2.11.0",
     "date-fns": "^2.11.0",
     "graphql": "^14.6.0",
-    "micro-cors": "^0.1.1"
+    "micro-cors": "^0.1.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.13.0",
